# hoarder

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md
docs/: development.md
docs/plans/: 2026-05-12-hoarder-connector-platform-design.md  2026-05-12-hoarder-connector-platform-implementation.md  2026-05-14-hoarder-mvp-control-plane-design.md  2026-05-14-hoarder-mvp-control-plane-implementation.md
src/: assets.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs
src/api/: error.rs  mod.rs  openapi.rs  routes.rs  state.rs  types.rs
src/app/: job_service.rs  mod.rs  run_service.rs  scheduler.rs  settings_service.rs  source_service.rs
src/connectors/: mod.rs  registry.rs  traits.rs
src/connectors/opendal/: config.rs  mod.rs  source.rs
src/core/: mod.rs  types.rs  vault_path.rs
src/db/: mod.rs  repository.rs  schema.rs
src/entity/: app_setting.rs  mod.rs  prelude.rs  source.rs  sync_error.rs  sync_item.rs  sync_job.rs  sync_run.rs
src/sync/: engine.rs  mod.rs  planner.rs  repository.rs  vault_writer.rs
tests/: api_error.rs  api_routes.rs  app_services.rs  cli_commands.rs  cli_parse.rs  connector_contract.rs  core_types.rs  db_schema.rs  e2e_local_fs_sync.rs  opendal_config.rs  opendal_fs_connector.rs  scheduler.rs  server_cors.rs  settings_repository.rs  static_assets.rs  sync_engine.rs  sync_planner.rs  vault_path.rs  vault_writer.rs
web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: FallbackNotice.svelte  JobForm.svelte  RunSummaryTable.svelte  SourceForm.svelte  StatusBadge.svelte
web/src/lib/: api.ts  format.ts  sourceServices.ts  state.ts  types.ts
web/src/routes/: Jobs.svelte  Overview.svelte  Runs.svelte  Settings.svelte  Sources.svelte
web/tests/: format.test.ts  sourceServices.test.ts  state.test.ts
